--- a/src/app/auth/sign-up/signup-stat/signup-stat.component.html
+++ b/src/app/auth/sign-up/signup-stat/signup-stat.component.html
@@ -1,10 +1,8 @@
 <div class="txtInnerWrap  ">
-  <h1 class="text-center">Managing Your Lease</h1>
+  <h1 class="text-center">{{heading}}</h1>
   <br>
-  <p class="text-center">You are but only a few steps away from managing
-    your lease(s).</p>
+  <p class="text-center" innerHTML="{{description}}"></p>
   <br>
   <br>
-
-
+  <h1 class="text-center" *ngIf="locked">877-257-2094</h1>
 </div>
