--- a/src/app/dashboard/claims/claims.component.html
+++ b/src/app/dashboard/claims/claims.component.html
@@ -1,10 +1,11 @@
-<div class="col-12 db-inner-wrap   ">
+<div class="col-12 db-inner-wrap  claimswrap  ">
   <!--breadcrums Starts Here-->
   <div class="row db-bread-wrap">
     <ol class="breadcrumb  w-100">
       <li class="breadcrumb-item">urLease</li>
       <li class="breadcrumb-item">Dashboard</li>
       <li class="breadcrumb-item active">Claims</li>
+
     </ol>
 
   </div>
