--- a/src/app/dashboard/epp/epp-popup/epp-popup.component.html
+++ b/src/app/dashboard/epp/epp-popup/epp-popup.component.html
@@ -55,7 +55,7 @@
       </div>
 
       <!-- Modal body -->
-      <div class="modal-body">
+      <div class="modal-body epppopwrap">
         <br>
         <br>
         <br>
