--- a/src/app/dashboard/faq/faq.component.html
+++ b/src/app/dashboard/faq/faq.component.html
@@ -1,11 +1,16 @@
-<div class="col-12 db-inner-wrap   ">
+<div class="col-12 db-inner-wrap faq-o-wrap ">
   <!--breadcrums Starts Here-->
-  <div class="row db-bread-wrap">
+  <div class="row db-bread-wrap bg-warning">
+    <div class="pdfDownload"><a target="_blank"
+                                href="https://www.firstdata.com/downloads/marketing-merchant/Global_Leasing_FAQ_FNL_USA_072015.pdf">
+      <img src="/assets/img/download.svg">Download
+      PDF</a></div>
     <ol class="breadcrumb  w-100">
       <li class="breadcrumb-item">urLease</li>
       <li class="breadcrumb-item">Dashboard</li>
       <li class="breadcrumb-item active">FAQ</li>
     </ol>
+
 
   </div>
   <!--wraper for FAQ-->
