--- a/src/app/landing-page/land-cnt-02/land-cnt-02.component.html
+++ b/src/app/landing-page/land-cnt-02/land-cnt-02.component.html
@@ -1,6 +1,6 @@
 <div class="col-12 land-cnt-01 ">
   <div class="clearfix"></div>
-  <div class="row">
+  <div class="row rowFix">
     <div class="col-12 col-md-6 land-cnt-01-inner order-md-last  ">
 
       <h4 class="fd-SubHeading"> Global Leasing - Partner Benefits</h4>
