--- a/src/assets/css/urLease.css
+++ b/src/assets/css/urLease.css
@@ -213,7 +213,8 @@ input[type=text], input[type=password] {
     line-height: 0px; }
   .land-head .butSpacer {
     display: inline-block;
-    width: 14px; }
+    width: 14px;
+    height: 10px; }
 
 .land-head {
   width: 100%; }
@@ -279,6 +280,10 @@ input[type=text], input[type=password] {
 
 .txtInnerWrap h1 {
   color: #004165; }
+
+.rowFix {
+  margin-left: -30px;
+  margin-right: -30px; }
 
 /*********************************** layout ENDS here *********************************/
 /*********************************** login  STARTS here *********************************/
@@ -478,7 +483,7 @@ input[type=text], input[type=password] {
   margin: 0 auto; }
 
 .btnSubmit.spe-sign {
-  margin-top: 45px; }
+  margin-top: 60px; }
 
 .headingWrap {
   font-family: SimpleSans-Medium, Helvetica, sans-serif;
@@ -608,6 +613,10 @@ input[type=text], input[type=password] {
     font-style: normal;
     font-stretch: normal;
     letter-spacing: normal; }
+
+.resettxtfix {
+  margin-bottom: 60px !important;
+  padding-bottom: 0px; }
 
 /*********************************** login ENDS here *********************************/
 /*********************************** dashboard  STARTS here *********************************/
@@ -1181,8 +1190,8 @@ input[type=text], input[type=password] {
     margin-left: 20px; }
 
 #paymentpop .mod-heading, #paymentpop p, #epppop .mod-heading, #epppop p {
-  font-family: SimpleSans-Bold, Helvetica, sans-serif;
-  font-size: 1.16rem;
+  font-family: SimpleSans-Black, Helvetica, sans-serif;
+  font-size: 16px;
   font-weight: normal;
   font-style: normal;
   font-stretch: normal;
@@ -1535,28 +1544,63 @@ input[type=text], input[type=password] {
     height: 20px;
     position: absolute; }
 
-#paymentpop p {
-  padding-left: 15px;
-  padding-right: 15px; }
-  #paymentpop p span {
+#paymentpop {
+  margin-top: 10%; }
+  #paymentpop p {
+    padding-left: 15px;
+    padding-right: 15px;
+    font-size: 14px; }
+    #paymentpop p span {
+      color: #0072ce;
+      display: inline-block;
+      margin-right: 5px; }
+  #paymentpop .mod-heading {
+    font-family: SimpleSans-Black, Helvetica, sans-serif;
+    font-size: 16px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.25;
+    letter-spacing: normal;
+    text-align: center;
     color: #0072ce; }
-#paymentpop .mod-heading {
+  #paymentpop .popbld {
+    font-weight: bold;
+    font-family: SimpleSans-Bold, Helvetica, sans-serif;
+    font-size: 14px;
+    text-align: left !important;
+    margin-left: 36px;
+    margin-top: -9px; }
+
+.btn:focus {
+  outline: none; }
+
+#paymentpop {
+  padding-right: 10px;
+  padding-left: 10px; }
+  #paymentpop .modal-dialog {
+    margin: 0px auto;
+    width: 100%; }
+
+.epppopwrap p {
+  color: #474747 !important;
   font-family: SimpleSans-Regular, Helvetica, sans-serif;
+  color: #474747;
   font-size: 14px;
-  font-weight: 900;
+  font-weight: normal;
+  line-height: normal;
   font-style: normal;
   font-stretch: normal;
-  line-height: 1.25;
-  letter-spacing: normal;
-  text-align: center;
-  color: #0072ce; }
-#paymentpop .popbld {
-  font-weight: bold;
+  letter-spacing: normal; }
+.epppopwrap h5 {
   font-family: SimpleSans-Bold, Helvetica, sans-serif;
+  color: #474747;
   font-size: 14px;
-  text-align: left !important;
-  margin-left: 35px;
-  margin-top: -9px; }
+  font-weight: bold;
+  line-height: normal;
+  font-style: normal;
+  font-stretch: normal;
+  letter-spacing: normal; }
 
 /*********************************** dashboard ENDS here *********************************/
 /*********************************** sidebar  STARTS here *********************************/
@@ -1575,10 +1619,10 @@ label:focus,
   outline: 0px !important;
   -webkit-appearance: none; }
 
-.form-control:focus, ul.lft-icon-wrap li.active {
-  border-color: #cccccc;
+.form-control:focus, ul.lft-icon-wrap li.active, ul.lft-icon-wrap li:active {
   -webkit-box-shadow: none;
-  box-shadow: none; }
+  box-shadow: none;
+  outline: none; }
 
 .sidenav {
   height: 100%;
@@ -1592,8 +1636,6 @@ label:focus,
   top: 0;
   /* Stay at the top */
   left: 0;
-  background-color: #ffc63f;
-  /* Black*/
   overflow-x: hidden;
   /* Disable horizontal scroll */
   padding-top: 60px;
@@ -1603,9 +1645,13 @@ label:focus,
   /* 0.5 second transition effect to slide in the sidenav */
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
+  background-color: red;
   background-color: #616365;
   -webkit-box-shadow: 4px 0 8px 0 rgba(0, 0, 0, 0.25);
           box-shadow: 4px 0 8px 0 rgba(0, 0, 0, 0.25); }
+
+.sidenav.ctrlWidthLft {
+  background-color: rgba(97, 99, 101, 0.75); }
 
 .lft-but-wrap {
   position: absolute;
@@ -2062,6 +2108,29 @@ input:checked + .slider:before {
 /*********************************** sidebar ENDS here *********************************/
 /*********************************** captcha  STARTS here *********************************/
 /*********************************** captcha ENDS here *********************************/
+/*********************************** Fixes  STARTS here *********************************/
+.faq-o-wrap .db-bread-wrap {
+  position: relative; }
+.faq-o-wrap .pdfDownload {
+  position: absolute;
+  right: 15px;
+  top: 0px; }
+  .faq-o-wrap .pdfDownload a {
+    font-family: SimpleSans-Bold, Helvetica, sans-serif;
+    color: #0072ce;
+    font-size: 10px;
+    font-weight: normal;
+    line-height: normal;
+    font-style: normal;
+    font-stretch: normal;
+    letter-spacing: normal;
+    display: inline-block; }
+    .faq-o-wrap .pdfDownload a img {
+      margin-right: 5px; }
+    .faq-o-wrap .pdfDownload a:hover {
+      text-decoration: none; }
+
+/*********************************** Fixes ENDS here *********************************/
 a:hover {
   color: red; }
 
