--- a/src/app/auth/sign-up/signup-main/signup-main.component.html
+++ b/src/app/auth/sign-up/signup-main/signup-main.component.html
@@ -1,12 +1,11 @@
 <div id="signWrap" class="container-fluid">
-  <div class="row">
-    <div class="col-sm-12  col-md-6 col-lg-6     ">
-      <app-signup-form (ctab)="ctab($event)"></app-signup-form>
+  <div class="row ">
+    <div class="col-sm-12" [ngClass]="{'col-md-6 col-lg-6': !showstat}">
+      <app-signup-form (ctab)="ctab($event)" (errorToStat)="updateStatDescription($event);"></app-signup-form>
     </div>
-    <div class="col-sm-12   col-md-6 col-lg-5        ">
-      <app-signup-stat [hidden]="showstat"></app-signup-stat>
+    <div class="col-sm-12   col-md-6 col-lg-5" *ngIf="!showstat">
+      <app-signup-stat [heading]="heading" [description]="description"></app-signup-stat>
     </div>
-
   </div>
 </div>
 
