--- a/src/app/dashboard/header/header.component.html
+++ b/src/app/dashboard/header/header.component.html
@@ -32,8 +32,7 @@
         <div class="clearfix"></div>
 
         <div class=" but-wrap d-md-block d-sm-none d-none ">
-           
-          <button type="button" class="btn btn-outline-secondary" class="btn btn-outline-primary"  ngbTooltip="You see, I show up on click!" triggers="click:blur">Clover Capital</button>
+          <button type="button" class="btn btn-outline-secondary" class="btn btn-outline-primary" placement="bottom"  ngbTooltip="You see, I show up on click!" triggers="click:blur">Clover Capital</button>
           <button type="button" class="btn btn-outline-secondary" class="btn btn-outline-primary"  ngbTooltip="You see, I show up on click!" triggers="click:blur" class="btn btn-outline-primary ">Advanced Same Day Funding</button>
         </div>
         <div class="icon-wrap  float-right">
