--- a/src/app/dashboard/payment-help-popup/payment-help-popup.component.html
+++ b/src/app/dashboard/payment-help-popup/payment-help-popup.component.html
@@ -14,12 +14,11 @@
       <div class="modal-body ">
         <div class="mod-heading mb-5">How to Make a Payment</div>
         <p class="text-left">Please include your lease number on the check</p>
-        <p class="text-left"><span>Email: </span>Copy of a voided check to <a
+        <p class="text-left"><span>Email:</span>Copy of a voided check to <a
           href="mailto:lease.accounting@firstdata.com"
           target="_new">lease.accounting@firstdata.com</a>
         </p>
-        <p class="text-left"><span>Mail:</span>Please include your lease number on the
-          check.</p>
+        <p class="text-left"><span>Mail:</span>Simply mail a check payable to First Data</p>
         <p class="popbld">First Data Global Leasing<br>
           PO Box 173845<br>
           Denver, CO 80217</p>
