--- a/src/app/dashboard/home/lease-block/lease-block.component.html
+++ b/src/app/dashboard/home/lease-block/lease-block.component.html
@@ -1,7 +1,34 @@
+
+<div class="lease-prev">Prev</div>
+<div class="lease-next">Next</div>
+
+<div class="your-class">
+  <div class="  "
+  *ngFor="let item of leaseArray; let i=index;"
+  [ngClass]="{'leaseCardSelected':selectedLease==i}"
+  (click)="selectedLease=i;emitSelectedLeaseObj(item)"
+  >
+      <div class="" [ngClass]="{'leaseCardSelected':selectedLease==i}">
+        <span class="" *ngIf="item['cardAlert']">{{item['cardAlert']}}</span>
+        <ul>
+          <li>
+            <label  [ngClass]="{'leaseCardSelected':selectedLease==i}" >Lease</label>
+            <br>
+            <span class=""  [ngClass]="{'leaseCardSelected':selectedLease==i}" >{{item['leaseNo']}}</span>
+          </li>
+        </ul>
+      </div>
+    </div>
+  
+
+</div>
+
+
+
+
+<!-- 
 <div class="row ">
   <div class="db-lease-wrap col-12 ">
-
-    <!--carousel ExampleControls1-->
     <div id="fd-lease-blocks-wrap" class="carousel slide" data-interval="false" data-ride="carousel">
       <div class="carousel-inner" role="listbox">
 
@@ -17,7 +44,6 @@
                           <div class="cus-card  p-5 col-12  " [ngClass]="{'leaseCardSelected':selectedLease==i}">
                             <span class="fd-badge" *ngIf="item['cardAlert']">{{item['cardAlert']}}</span>
                             <ul>
-                              <!--oo-->
                               <li>
                                 <label  [ngClass]="{'leaseCardSelected':selectedLease==i}" >Lease</label>
                                 <br>
@@ -30,141 +56,6 @@
                         </div>
                         </div>
                         </div>
-
-        <!-- <div class="carousel-item  py-3 active">
-          <div class="row">
-            <div class="col-12  ">
-              <div class="row">
-                <div class="fd-lease-blocks col-12 col-sm-6  col-md-3  ">
-                  <div class="cus-card active  p-5 col-12  ">
-                    <span class="fd-badge">2</span>
-                    <ul>
-                      <li>
-                        <label>Lease</label>
-                        <br>
-                        <span class="">052-5234567-000</span>
-                      </li>
-
-                    </ul>
-
-                  </div>
-                </div>
-                <div class=" fd-lease-blocks col-12 col-sm-6 col-md-3 d-none d-sm-block">
-                  <div class="cus-card p-5 col-12  ">
-                    <span class="fd-badge">2</span>
-
-                    <ul>
-                      <li>
-                        <label>Lease</label>
-                        <br>
-                        <span class="">052-5234567-000</span>
-                      </li>
-
-                    </ul>
-
-                  </div>
-                </div>
-                <div class=" fd-lease-blocks col-12 col-sm-6 col-md-3 d-none d-md-block">
-                  <div class="cus-card p-5 col-12  ">
-                    <span class="fd-badge">2</span>
-
-                    <ul>
-                      <li>
-                        <label>Lease</label>
-                        <br>
-                        <span class="">052-5234567-000</span>
-                      </li>
-
-                    </ul>
-
-                  </div>
-                </div>
-                <div class=" fd-lease-blocks col-12 col-sm-6 col-md-3 d-none d-md-block">
-                  <div class="cus-card p-5 col-12  ">
-                    <ul>
-                      <li>
-                        <label>Lease</label>
-                        <br>
-                        <span class="">052-5234567-000</span>
-                      </li>
-
-                    </ul>
-
-                  </div>
-                </div>
-              </div>
-
-            </div>
-
-          </div>
-        </div> -->
-        <!-- <div class="carousel-item  py-3 active">
-          <div class="row">
-            <div class="col-12  ">
-              <div class="row"> -->
-                <!--one- card one-->
-                <!-- <div class=" fd-lease-blocks col-12 col-sm-6  col-md-3  ">
-                  <div class="cus-card  p-5 col-12  ">
-                    <ul>
-                      <li>
-                        <label>Lease</label>
-                        <br>
-                        <span class="">052-5234567-000</span>
-                      </li>
-
-                    </ul>
-
-                  </div>
-                </div> -->
-                <!--one- card two-->
-                <!-- <div class=" fd-lease-blockscol-12 col-sm-6 col-md-3 d-none d-sm-block   ">
-                  <div class="cus-card p-5 col-12  ">
-                    <ul>
-                      <li>
-                        <label>Lease</label>
-                        <br>
-                        <span class="">052-5234567-000</span>
-                      </li>
-
-                    </ul>
-
-                  </div>
-                </div> -->
-                <!--one- card three-->
-                <!-- <div class="fd-lease-blocks col-12 col-sm-6 col-md-3 d-none d-md-block ">
-                  <div class="cus-card p-5 col-12  ">
-                    <ul>
-                      <li>
-                        <label>Lease</label>
-                        <br>
-                        <span class="">052-5234567-000</span>
-                      </li>
-
-                    </ul>
-
-                  </div>
-                </div> -->
-                <!--one- card four-->
-                <!-- <div class="fd-lease-blocks col-12 col-sm-6 col-md-3 d-none d-md-block     ">
-                  <div class="cus-card p-5 col-12  ">
-                    <ul>
-                      <li>
-                        <label>Lease</label>
-                        <br>
-                        <span class="">052-5234567-000</span>
-                      </li>
-
-                    </ul>
-
-                  </div>
-                </div> -->
-              <!-- </div>
-
-
-            </div>
-
-          </div>
-        </div> -->
       </div>
       <a href="#fd-lease-blocks-wrap" class="carousel-control-prev" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -179,4 +70,4 @@
 
   </div>
 
-</div>
+</div> -->
