--- a/src/app/dashboard/home/lease-tabs/lease-tabs.component.html
+++ b/src/app/dashboard/home/lease-tabs/lease-tabs.component.html
@@ -8,7 +8,7 @@
         <li class="nav-item mb-2 col-12 col-sm-6 col-md-3">
           <a class="nav-link active show" data-toggle="pill" href="#Equipment">Equipment</a>
         </li>
-        <li class="nav-item mb-2 col-12 col-sm-6 col-md-3">
+        <li class="nav-item mb-2 col-12 col-sm-6 col-md-3"  *ngIf=" selectedLease['legalStatus']=='current' || selectedLease['legalStatus']=='Default'">
           <a class="nav-link" data-toggle="pill" href="#Payment">Payment</a>
         </li>
         <li class="nav-item mb-2 col-12 col-sm-6 col-md-3">
