left navigation bar bug fixed

--- a/src/app/dashboard/left-side-bar/left-side-bar.component.html
+++ b/src/app/dashboard/left-side-bar/left-side-bar.component.html
@@ -14,7 +14,7 @@
 
   </div>
   <ul class="lft-icon-wrap p-0">
-    <li [routerLinkActive]="['active']" [routerLink]="['home']">
+    <li [routerLinkActive]="['active']" [routerLink]="['home']" (click)="sidebarLft()">
       <div class="icnWrap ">
         <img class="icn" src="assets/img/ls-home.svg">
         <br>
@@ -24,7 +24,7 @@
 
 
     </li>
-    <li [routerLinkActive]="['active']" [routerLink]="['epp']">
+    <li [routerLinkActive]="['active']" [routerLink]="['epp']" (click)="sidebarLft()">
       <div class="icnWrap">
         <img class="icn" src="assets/img/ls-epp.svg">
         <br>
@@ -38,7 +38,7 @@
 
 
     </li>
-    <li [routerLinkActive]="['active']" [routerLink]="['claims']">
+    <li [routerLinkActive]="['active']" [routerLink]="['claims']" (click)="sidebarLft()">
       <div class="icnWrap">
         <img class="icn" src="assets/img/ls-claims.svg">
         <br>
@@ -48,7 +48,7 @@
 
 
     </li>
-    <li [hidden]="!showeol" [routerLinkActive]="['active']" [routerLink]="['eol']">
+    <li [hidden]="!showeol" [routerLinkActive]="['active']" [routerLink]="['eol']" (click)="sidebarLft()">
       <div class="icnWrap">
         <img class="icn" src="assets/img/ls-eol.svg">
         <br>
@@ -58,7 +58,7 @@
 
 
     </li>
-    <li [routerLinkActive]="['active']" [routerLink]="['faq']">
+    <li [routerLinkActive]="['active']" [routerLink]="['faq']" (click)="sidebarLft()">
       <div class="icnWrap ">
         <img class="icn" src="assets/img/ls-faq.svg">
         <br>
@@ -68,7 +68,7 @@
 
 
     </li>
-    <li [routerLinkActive]="['active']" [routerLink]="['contact']">
+    <li [routerLinkActive]="['active']" [routerLink]="['contact']" (click)="sidebarLft()">
       <div class="icnWrap">
         <img class="icn" src="assets/img/ls-phone.svg">
         <br>
